--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,18 @@
     "houdunwang/config": "~1.0",
     "houdunwang/container": "~1.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^6.1"
+  },
   "autoload": {
     "files": [],
     "psr-4": {
       "houdunwang\\middleware\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "tests\\": "tests"
     }
   }
 }
