--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "require": {
     "php": ">=5.4.0",
     "houdunwang/config": "~1.0",
+    "houdunwang/arr": "~1.0",
     "houdunwang/container": "~1.0"
   },
   "require-dev": {
