--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "php": ">=5.4.0",
     "houdunwang/config": "~1.0",
     "houdunwang/arr": "~1.0",
-    "houdunwang/container": "~1.0"
+    "houdunwang/container": "~1.0",
+    "houdunwang/route": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.1"
